...
                                <rect key="frame" x="0.0" y="65" width="375" height="602"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="WUv-1B-L62">
                                    <rect key="frame" x="0.0" y="178" width="375" height="100"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="55"/>
                                    <state key="normal" title="Logout"/>
                                    <connections>
                                        <action selector="logoutUser:" destination="kjF-Jj-Dag" eventType="touchUpInside" id="CrQ-Wp-ORQ"/>
                                    </connections>
                                </button>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="Meal Cell" rowHeight="150" id="DoX-B3-XnT" customClass="MealTableViewCell" customModule="Peppermint" customModuleProvider="target">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vwe-Vt-vG4">
                                <rect key="frame" x="16" y="617" width="60" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="CbO-Kb-qiX"/>
                                    <constraint firstAttribute="height" constant="44" id="SBs-fF-0j9"/>
                                </constraints>
                                <state key="normal" title="Cancel"/>
                                <connections>
                                    <action selector="cancelMeal:" destination="WHw-79-zpS" eventType="touchUpInside" id="kGL-Xm-nhA"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hxy-IG-8wI">
                                <rect key="frame" x="62.5" y="148" width="250" height="2"/>
...
                                            <constraint firstAttribute="width" constant="277" id="ojd-Yr-Rf7"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                        <color key="textColor" red="0.81158965826034546" green="0.95841628313064575" blue="0.9011269211769104" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="1du-iu-dc4">
                                        <rect key="frame" x="30" y="116" width="270" height="30"/>
                                        <color key="backgroundColor" red="0.0022287042809999999" green="0.79743868110000005" blue="0.52168452740000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="Vqs-rH-m5c"/>
                                            <constraint firstAttribute="width" constant="270" id="xXv-AE-ndf"/>
                                        </constraints>
                                        <color key="textColor" red="0.0" green="0.53358119729999998" blue="0.28941699859999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="Fgf-Gj-vc0">
                                        <rect key="frame" x="30" y="161" width="270" height="30"/>
                                        <color key="backgroundColor" red="0.0022287042809999999" green="0.79743868110000005" blue="0.52168452740000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="270" id="MwE-j2-uTi"/>
                                            <constraint firstAttribute="height" constant="30" id="NRh-qZ-MeI"/>
                                        </constraints>
...
                                        <constraints>
                                            <constraint firstAttribute="width" constant="278" id="1KU-a2-oyT"/>
                                            <constraint firstAttribute="height" constant="36" id="8lV-Lq-W8V"/>
                                        </constraints>
                                        <state key="normal">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Login">
                                                    <attributes>
                                                        <color key="NSColor" red="0.99195677042007446" green="0.99622899293899536" blue="0.99192315340042114" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <font key="NSFont" size="20" name=".AppleSystemUIFont"/>
                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                    </attributes>
                                                </fragment>
...
